--- a/PROYECTOS_HTML_y_CSS/Replica_Dayseeker/style.css
+++ b/PROYECTOS_HTML_y_CSS/Replica_Dayseeker/style.css
@@ -79,3 +79,43 @@ header a:hover {
     width: 100%;
     object-fit: cover;
 }
+
+/* FEATURED ITEMS */
+.featured-items {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: space-around; */
+    padding: 2rem;
+}
+
+.featured-items ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 390px);
+    justify-content: center;
+    width: 100%;
+    list-style-type: none;
+    text-align: center;
+}
+
+.featured-items ul p {
+    margin-top: 1rem;
+}
+
+.featured-items img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+/* VIDEOCLIP */
+.videoclip {
+    height: 35vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
